# PlateSolver

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt
.github/workflows/: tests.yml
CI_tests/python/: test_plate_solving.py
PlateSolver/: AsterismHasher.h  Common.h  DescriptionAdder.h  GeometricTransformations.h  GraphicsFunctions.h  HashFinder.h  ImageHasher.h  ImageLoader.h  KDTree.h  KDTree_templated.h  Logger.h  NightSkyIndexer.h  PhotoAnnotator.h  PlateSolverTool.h  StarDatabaseHandler.h  StarFinder.h  StarPlotter.h  StarPositionHandler.h  StringOperations.h  Vector3D.h
data/: star_list.csv
data/deep_sky_objects/: Caldwell.csv  Messier.csv
gui/: app.ini  app.py  app.service  run_localhost.py
gui/create_ap/: create_ap.service
gui/static/css/: bootstrap.min.css  dc.css  style.css
gui/tools/: equatorial_to_azimuthal.py  helper_functions.py  target_coordinates_finder.py
gui/views/: confirm_target.tpl  footer.tpl  header.tpl  index.tpl  select_target.tpl  show_result.tpl
python/: cpp_logging_wrapper.py  get_catalogue.py  plate_solving_wrapper.py  wrapper_example.py
src/: AsterismHasher.cxx  Common.cxx  DescriptionAdder.cxx  GeometricTransformations.cxx  GraphicsFunctions.cxx  HashFinder.cxx  ImageHasher.cxx  ImageLoader.cxx  KDTree.cxx  Logger.cxx  NightSkyIndexer.cxx  PhotoAnnotator.cxx  PlateSolverTool.cxx  StarDatabaseHandler.cxx  StarFinder.cxx  StarPlotter.cxx  StarPositionHandler.cxx  StringOperations.cxx  Vector3D.cxx
utils/: convert_binary_to_kd_tree.cxx  convert_catalogue_csv_to_bin.cxx  convert_text_hash_file_to_binary.cxx  create_hash_file.cxx  merge_index_files.cxx  plate_solve.cxx  python_binding.cxx  python_binding_logger.cxx  test.cxx  tests.cxx
